--- a/index11.html
+++ b/index11.html
@@ -17,7 +17,7 @@
     </div>
 	<div>
 		<div>
-			<h2 class="h2">John Doe</h2>
+			<h2 class="h2">Johbghhjn Doe</h2>
 		</div>
 		<div>
 		<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rhoncus a erat vitae
@@ -28,7 +28,7 @@
               tellus mattis, nec vehicula nunc ullamcorper. Mauris ut bibendum urna. Vestibulum in dui justo. Morbi
               ultrices
               vitae
-              purus et mattis.</p>
+              purus et mattis...............</p>
 			  
         <img src="lab1-class/john-doe.jpg" alt="John Doe">
 		
